# DrukBam

./: DrukBam  MANIFEST.in  PlotBam.py  README.md  classes.py  conda.info  conda1.sh  conda2.sh  fasta.py  poetryTest.toml  pyproject.toml  setup.py  style.ini  test.sh  test_clipped.sh  test_flags.sh  test_global.sh
DrukBam/: MapPlot.py  PlotCalc.py  __init__.py  __main__.py  bamCalc.py  classic.ini  setup.py  vcfParse.py
DrukBam/drukbam.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
classes/: MapPlot.py  PlotCalc.py  bamCalc.py
conda-out/: channeldata.json  index.html
conda-out/linux-32/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-64/: current_repodata.json.bz2  drukbam-0.1.2.3-py39_0.tar.bz2  drukbam-1.1.1-py39_0.tar.bz2  index.html  repodata.json  repodata_from_packages.json  repodata_from_packages.json.bz2
conda-out/linux-aarch64/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-armv6l/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-armv7l/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-ppc64/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-ppc64le/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/linux-s390x/: drukbam-1.1.1-py39_0.tar.bz2
conda-out/noarch/: index.html
conda-out/osx-64/: drukbam-1.1.1-py39_0.tar.bz2
dev/: DrukBam
docker/: Dockerfile
druk_bam/: MapPlot.py  PlotCalc.py  bamCalc.py  classic.ini  vcfParse.py
drukbam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test_data/: EGFP.txt  chr19_first500k.fasta  chr19_first500k.fasta.fai  testSample.bam  testSample.bam.bai  test_small.bam  test_small.bam.bai
(+15 files in other folders)
